# chip8-emulator

./: .clangd  CMakeLists.txt  README.md  build.sh
src/: chip8.cpp  chip8.hpp  main.cpp
src/core/: chip8.cpp
tests/: CMakeLists.txt  chip8_test.cpp
web/: index.html  index.js  index.wasm  main.js  styles.css
